--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ body {
     
     font-family: 'Titillium Web', sans-serif;
     background-color: var(--color2);
+    text-align: center;
 }
 
 main {
